начал верстку с препроцессором, разметил блок навигации

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,5 @@
-body {
-  background-color: red;
-}
+@import "fonts.less";
+@import "mixin.less";
+@import "variables.less";
+@import "blocks/navigation.less";
+@import "scaffolding.less";
