--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -1,62 +1,63 @@
 .list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .navigation {
-    display: flex;
-    flex-direction: column;
-    position: relative;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 
-    &__link {
-        text-decoration: none;
-        .color-w;
-        .caps;
-        .font-bold;
-        font-size: 18px;
-        display: block;
-        margin: auto;
-    }
+  &__link {
+    text-decoration: none;
+    .color-w;
+    .caps;
+    @font-bold;
+    font-size: 18px;
+    display: block;
+    margin: auto;
+  }
 
-    &__item {
-        .bgc-blue;
-        text-align: center;
-        box-shadow: inset 0px 1px 0 0 rgba(255, 255, 255, 0.2);
-        min-height: 41px;
-        padding-top:15px;
-    }
-}
-.nav-main{
+  &__item {
 
-  &__logo-image{
-  display: block;
-  margin: auto;
+    .bgc-blue;
+    text-align: center;
+    box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.2);
+    min-height: 41px;
+    padding-top: 15px;
+  }
 }
 
-&__button-open{
+.nav-main {
+  &__logo-image {
+    display: block;
+    margin: auto;
+  }
 
-}
-&__button-close{
-  border:none;
-  background: none;
-  position: absolute;
-  top: 15px;
-  margin-left: 270px;
-}
-&__svg-close{
-  width: 23px;
-  height: 23px;
-}
-&__button-open{
-  border:none;
-  background: none;
-  position: absolute;
-  margin-top:-70px;
-  margin-left:270px;
-}
-&__svg-open{
-  width: 26px;
-  height: 21px;
-}
+  &__button-close {
+    border: none;
+    background: none;
+    position: absolute;
+    top: 15px;
+    margin-left: 270px;
+  }
+
+  &__svg-close {
+    width: 23px;
+    height: 23px;
+  }
+
+  &__button-open {
+    border: none;
+    background: none;
+    position: absolute;
+    margin-top: -70px;
+    margin-left: 270px;
+  }
+
+  &__svg-open {
+    width: 26px;
+    height: 21px;
+  }
 }
