--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -1,12 +1,13 @@
-body{
+body {
   width: 320px;
   margin: 0;
   padding: 0;
   font-size: 14px;
-  .font-norm;
+  @font-norm;
   .margin-a;
 }
-img{
+
+img {
   max-width: 100%;
   height: auto;
 }
