добавил миксины, примеси, подключил файлы в стиле

--- a/source/less/mixin.less
+++ b/source/less/mixin.less
@@ -2,14 +2,22 @@
   background-color: @blue;
 }
 
-.color-w {
-  color: #ffffff;
-}
-
 .caps {
   text-transform: uppercase;
 }
 
-.margin-a {
-  margin: auto;
+.text {
+  color: @gray;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.title {
+  font-family: @font-bold;
+  font-size: 18px;
+}
+
+.pad20 {
+  padding-left: 20px;
+  padding-right: 20px;
 }
