--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,16 @@
 @import "fonts.less";
 @import "mixin.less";
 @import "variables.less";
-@import "blocks/navigation.less";
 @import "scaffolding.less";
+@import "blocks/navigation.less";
+@import "blocks/image-sedona-index.less";
+@import "blocks/social-list.less";
+@import "blocks/link-academy.less";
+@import "blocks/hashtag.less";
+@import "blocks/footer-page.less";
+@import "blocks/header-title.less";
+@import "blocks/advantage-list.less";
+@import "blocks/find-hotel-block.less";
+@import "blocks/find-hotel-button.less";
+@import "blocks/index-page.less";
+@import "blocks/header-page.less";
