--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,3 +1,4 @@
 @blue:#81b3d2;
-@font-bold: "pt sans bold";
-@font-norm: "pt sans";
+@font-bold: "pt sans bold", "Arial", sans-serif;
+@font-norm: "pt sans", "Arial", sans-serif;
+@gray: #333333;
