--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -13,7 +13,7 @@
     text-decoration: none;
     .color-w;
     .caps;
-    @font-bold;
+    font-family: @font-bold;
     font-size: 18px;
     display: block;
     margin: auto;
