--- a/source/less/blocks/header-title.less
+++ b/source/less/blocks/header-title.less
@@ -7,7 +7,7 @@
     content: "";
     height: 35px;
     width: 100%;
-    background-image: url (../../img/bg-intro-triangle-mobile.svg);
+    background-image: url("../../img/bg-intro-triangle-mobile.svg");
     left: 0;
     top: -37px;
   }
@@ -35,7 +35,7 @@
     content: "";
     height: 35px;
     width: 320px;
-    background-image: url (../../img/bg-triangle.svg);
+    background-image: url("../../img/bg-triangle.svg");
     left: 0;
     bottom: -30px;
   }
