--- a/source/less/blocks/image-sedona-index.less
+++ b/source/less/blocks/image-sedona-index.less
@@ -1,5 +1,5 @@
 .image-sedona-index {
-  background-image: url (../../img/bg-back-mobile@1x.jpg);
+  background-image: url("../../img/bg-back-mobile@1x.jpg");
   width: 320px;
   height: 390px;
   position: relative;
@@ -8,7 +8,7 @@
   &::before {
     position: absolute;
     content: " ";
-    background-image: url (../../img/text-sedona-index.svg);
+    background-image: url("../../img/text-sedona-index.svg");
     width: 280px;
     height: 215px;
   }
