--- a/source/less/blocks/advantage-list.less
+++ b/source/less/blocks/advantage-list.less
@@ -14,7 +14,7 @@
   &::after {
     content: "";
     display: block;
-    background-image: url (../../img/main-city-mobile@1x.jpg);
+    background-image: url("../../img/main-city-mobile@1x.jpg");
     background-size: 100%;
     height: 260px;
     background-repeat: no-repeat;
@@ -120,7 +120,7 @@
   &::after {
     content: " ";
     display: block;
-    background-image: url (../../img/photo-bridge-mobile@1x.jpg);
+    background-image: url("../../img/photo-bridge-mobile@1x.jpg");
     background-size: 100%;
     height: 260px;
     background-repeat: no-repeat;
