--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -1,9 +1,3 @@
-.list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
 .navigation {
   display: flex;
   flex-direction: column;
@@ -11,7 +5,7 @@
 
   &__link {
     text-decoration: none;
-    .color-w;
+    color: #ffffff;
     .caps;
     font-family: @font-bold;
     font-size: 18px;
@@ -26,38 +20,5 @@
     box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.2);
     min-height: 41px;
     padding-top: 15px;
-  }
-}
-
-.nav-main {
-  &__logo-image {
-    display: block;
-    margin: auto;
-  }
-
-  &__button-close {
-    border: none;
-    background: none;
-    position: absolute;
-    top: 15px;
-    margin-left: 270px;
-  }
-
-  &__svg-close {
-    width: 23px;
-    height: 23px;
-  }
-
-  &__button-open {
-    border: none;
-    background: none;
-    position: absolute;
-    margin-top: -70px;
-    margin-left: 270px;
-  }
-
-  &__svg-open {
-    width: 26px;
-    height: 21px;
   }
 }
