--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,3 +14,4 @@
 @import "blocks/find-hotel-button.less";
 @import "blocks/index-page.less";
 @import "blocks/header-page.less";
+@import "blocks/nav-main.less";
