--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -3,11 +3,16 @@ body {
   margin: 0;
   padding: 0;
   font-size: 14px;
-  @font-norm;
-  .margin-a;
+  font-family: @font-norm;
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+
+.list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
