Разбил файлы на папки, устранил ошибки с вложенностью, амперсандом, переписал стили под новые классы, подогнал под ПП

--- a/source/less/blocks/footer-page/social-list.less
+++ b/source/less/blocks/footer-page/social-list.less
@@ -1,13 +1,13 @@
 .social-list {
   display: flex;
   justify-content: center;
-
-  &__item {
-    margin: 2.5px;
-  }
 }
 
-.social-link {
+.social-list__item {
+  margin: 2.5px;
+}
+
+.social-list__link {
   background-color: @blue;
   box-sizing: border-box;
   width: 47px;
