--- a/source/less/blocks/header-page/header-title.less
+++ b/source/less/blocks/header-page/header-title.less
@@ -1,6 +1,7 @@
 .header-title {
   padding: 0 32px;
   position: relative;
+  text-align: center;
 
   &::before {
     position: absolute;
@@ -12,31 +13,25 @@
     top: -37px;
   }
 
-  &__title {
-    .caps;
-    .title;
-    text-align: center;
-    line-height: 26px;
-    display: block;
-    padding-top: 27px;
-  }
-
-  &__paragraph {
-    color: @gray;
-    line-height: 26px;
-    text-align: center;
-    .caps;
-    margin-top: 30px;
-    padding-bottom: 10px;
-  }
-
   &::after {
     position: absolute;
     content: "";
-    height: 35px;
-    width: 320px;
+    height: 37px;
+    width: 100%;
     background-image: url("../../img/bg-triangle.svg");
     left: 0;
-    bottom: -30px;
+    bottom: -14px;
+    background-color: @blue;
   }
+}
+
+.header-title__title {
+  line-height: 26px;
+  padding-top: 28px;
+}
+
+.header-title__paragraph {
+  line-height: 26px;
+  margin-top: 28px;
+  padding-bottom: 30px;
 }
