--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -1,6 +1,6 @@
 body {
   width: 320px;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   font-size: 14px;
   font-family: @font-norm;
@@ -15,4 +15,42 @@ img {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.title {
+  font-family: @font-bold;
+  font-size: 18px;
+  .caps;
+  line-height: 26px;
+}
+
+.title--color--white {
+  color: #ffffff;
+}
+
+.title--size--big {
+  font-size: 21px;
+}
+
+.text {
+  color: @gray;
+  font-size: 14px;
+  line-height: 21px;
+  .caps;
+}
+
+.text--color--white {
+  color: #ffffff;
+}
+
+.number {
+  .text;
+}
+
+.number--color--white {
+  color: #ffffff;
+}
+
+.link {
+  text-decoration: none;
 }
