создал и подключил файлы для form-page

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,6 +11,12 @@
 @import "blocks/index-page/advantage-list.less";
 @import "blocks/index-page/find-hotel-block.less";
 @import "blocks/index-page/find-hotel-button.less";
+@import "blocks/fomr-page/form-block.less";
+@import "blocks/fomr-page/form-name.less";
+@import "blocks/fomr-page/form-contacts.less";
+@import "blocks/fomr-page/form-rating.less";
+@import "blocks/fomr-page/form-visited.less";
+@import "blocks/fomr-page/feeling.less";
 @import "blocks/footer-page/footer-page.less";
 @import "blocks/footer-page/hashtag.less";
 @import "blocks/footer-page/social-list.less";
