Отформатировал, к адресам добавил кавычки

--- a/source/less/blocks/form-page/form-contacts.less
+++ b/source/less/blocks/form-page/form-contacts.less
@@ -19,10 +19,10 @@
   margin-left: 50%;
 }
 
-.form-contacts__label--icon--phone::after{
-  background-image: url(../../../img/icon-phone.svg);
+.form-contacts__label--icon--phone::after {
+  background-image: url("../../../img/icon-phone.svg");
 }
 
-.form-contacts__label--icon--email::after{
-  background-image: url(../../../img/icon-mail.svg)
+.form-contacts__label--icon--email::after {
+  background-image: url("../../../img/icon-mail.svg");
 }
