--- a/source/less/blocks/form-page/form-visited.less
+++ b/source/less/blocks/form-page/form-visited.less
@@ -3,17 +3,17 @@
   position: relative;
 }
 
-.input-checkbox:checked+label::before{
+.input-checkbox:checked + label::before {
   content: "";
   position: absolute;
-  background-image: url(../../../img/icon-tick.svg);
+  background-image: url("../../../img/icon-tick.svg");
   background-repeat: no-repeat;
   background-color: #f2f2f2;
   width: 46px;
   height: 46px;
 }
 
-.input-checkbox+label::before{
+.input-checkbox + label::before {
   content: "";
   position: absolute;
   background-color: #f2f2f2;
