сверстал мобильную страницу форм и подогнал под ПП, начал верстать главную страницу для планшета

--- a/source/less/blocks/form-page/form-contacts.less
+++ b/source/less/blocks/form-page/form-contacts.less
@@ -1,10 +1,15 @@
 .form-contacts__input {
   background-color: #f2f2f2;
   padding: 16px;
+  padding-left: 21px;
+  width: 186px;
 }
 
 .form-contacts__label {
   position: relative;
+  margin-left: 20px;
+  display: block;
+  margin-bottom: 10px;
 }
 
 .form-contacts__label::after {
@@ -15,14 +20,20 @@
   height: 57px;
   background-color: #e6e6e6;
   background-position: center;
-  margin-top: 21px;
-  margin-left: 50%;
+  margin-top: 32px;
+  margin-left: 22%;
 }
 
 .form-contacts__label--icon--phone::after {
   background-image: url("../../../img/icon-phone.svg");
+  margin-left: 16%;
 }
 
 .form-contacts__label--icon--email::after {
   background-image: url("../../../img/icon-mail.svg");
+  margin-top: 31px;
+}
+
+.form-contacts__item {
+  margin-bottom: 15px;
 }
