--- a/source/less/blocks/form-page/form-name.less
+++ b/source/less/blocks/form-page/form-name.less
@@ -1,6 +1,7 @@
 .form-name__input {
   background-color: #f2f2f2;
   padding: 16px;
+  padding-left: 21px;
 }
 
 .form-name__item {
@@ -11,4 +12,20 @@
 
 .form-name__label {
   margin-right: 15px;
+}
+
+.input-text {
+  box-sizing: border-box;
+
+  &--patronymic {
+    width: 195px;
+  }
+
+  &--name {
+    width: 227px;
+  }
+
+  &--surname {
+    width: 190px;
+  }
 }
