--- a/source/less/blocks/header-page/nav-main.less
+++ b/source/less/blocks/header-page/nav-main.less
@@ -28,3 +28,16 @@
   width: 26px;
   height: 21px;
 }
+
+@media (min-width: @tablet) {
+  .nav-main__button-open,
+  .nav-main__button-close {
+    display: none;
+  }
+}
+
+@media (min-width: @tablet) {
+  .nav-main__logo-image {
+    margin-top: -56px;
+  }
+}
