--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -2,3 +2,5 @@
 @font-bold: "pt sans bold", "Arial", sans-serif;
 @font-norm: "pt sans", "Arial", sans-serif;
 @gray: #333333;
+@tablet: 768px;
+@decktop: 1200px;
