--- a/source/less/blocks/form-page/form-block.less
+++ b/source/less/blocks/form-page/form-block.less
@@ -1,6 +1,12 @@
+.form-block {
+  box-sizing: border-box;
+  padding: 0 20px;
+  margin-bottom: 48px;
+}
+
 .form-item {
   border: none;
-  padding: 0 20px;
+  padding: 0;
   margin: 0;
   border-top: 1px solid #e6e6e6;
   padding-top: 3px;
@@ -22,4 +28,28 @@
 .field-text::-moz-placeholder {
   color: #000000;
   font-size: 18px;
+}
+
+.form-block__button {
+  border: none;
+  background-color: @blue;
+  width: 280px;
+  height: 58px;
+  color: #ffffff;
+  font-family: @font-bold;
+  .caps;
+  font-size: 21px;
+  margin-top: 45px;
+}
+
+.form-block__name {
+  margin-bottom: 10px;
+}
+
+.form-block__contacts {
+  margin-bottom: 15px;
+}
+
+.form-block__feeling {
+  margin-top: -12px;
 }
