--- a/source/less/blocks/form-page/form-rating.less
+++ b/source/less/blocks/form-page/form-rating.less
@@ -3,6 +3,18 @@
   flex-direction: column;
 }
 
+.form-rating__title {
+  margin-bottom: 37px;
+}
+
+.form-rating__label {
+  margin-left: 80px;
+}
+
+.form-rating__item {
+  margin-bottom: 43px;
+}
+
 .input-radio {
   display: none;
   position: relative;
@@ -16,4 +28,18 @@
   height: 20px;
   border-radius: 50%;
   border: 17px solid #f2f2f2;
+  margin-left: -78px;
+  margin-top: -13px;
+}
+
+.input-radio + label::before {
+  position: absolute;
+  content: "";
+  background-color: #f2f2f2;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 17px solid #f2f2f2;
+  margin-left: -78px;
+  margin-top: -13px;
 }
