--- a/source/less/blocks/form-page/form-visited.less
+++ b/source/less/blocks/form-page/form-visited.less
@@ -3,20 +3,37 @@
   position: relative;
 }
 
+.form-visited__title {
+  margin-bottom: 35px;
+}
+
+.form-visited__item {
+  margin-bottom: 54px;
+}
+
+.form-visited__label {
+  margin-left: 80px;
+}
+
 .input-checkbox:checked + label::before {
   content: "";
   position: absolute;
+  background-position: center;
   background-image: url("../../../img/icon-tick.svg");
   background-repeat: no-repeat;
   background-color: #f2f2f2;
-  width: 46px;
-  height: 46px;
+  width: 54px;
+  height: 54px;
+  margin-left: -79px;
+  margin-top: -12px;
 }
 
 .input-checkbox + label::before {
   content: "";
   position: absolute;
   background-color: #f2f2f2;
-  width: 46px;
-  height: 46px;
+  width: 54px;
+  height: 54px;
+  margin-left: -79px;
+  margin-top: -12px;
 }
