--- a/source/less/blocks/header-page/image-sedona.less
+++ b/source/less/blocks/header-page/image-sedona.less
@@ -1,10 +1,18 @@
-.image-sedona--size--big {
+.image-sedona {
   background-color: @blue;
   background-image: url("../../../img/bg-back-mobile@1x.jpg");
   width: 100%;
-  height: 390px;
   position: relative;
   z-index: -1;
+  background-size: cover;
+
+  &--size--big {
+    height: 390px;
+  }
+
+  &--size--small {
+    height: 158px;
+  }
 
   &::before {
     position: absolute;
