--- a/source/less/blocks/header-page/navigation.less
+++ b/source/less/blocks/header-page/navigation.less
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  background-color: @blue;
 }
 
 .navigation__link {
@@ -14,9 +15,24 @@
 }
 
 .navigation__item {
-  background-color: @blue;
   text-align: center;
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.2);
   min-height: 41px;
   padding-top: 15px;
+}
+
+@media (min-width: @tablet) {
+  .navigation {
+    flex-direction: row;
+    width: 100%;
+    background-color: transparent;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: @tablet) {
+  .navigation__link {
+    color: #000000;
+    font-size: 14px;
+  }
 }
